--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,22 @@
-﻿<Application x:Class="SysMax.App"
+﻿<!-- App.xaml modifications to include converters and resources -->
+<Application x:Class="SysMax.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SysMax"
+             xmlns:models="clr-namespace:SysMax2._1.Models"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <!-- Converters -->
+            <models:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <models:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter"/>
+
+        <!-- Common colors and brushes -->
+        <SolidColorBrush x:Key="PrimaryColor" Color="#3498db"/>
+        <SolidColorBrush x:Key="SecondaryColor" Color="#2ecc71"/>
+        <SolidColorBrush x:Key="DarkBackgroundColor" Color="#1E1E1E"/>
+        <SolidColorBrush x:Key="LightTextColor" Color="#FFFFFF"/>
+        <SolidColorBrush x:Key="MutedTextColor" Color="#AAAAAA"/>
+        <SolidColorBrush x:Key="WarningColor" Color="#f39c12"/>
+        <SolidColorBrush x:Key="DangerColor" Color="#e74c3c"/>
     </Application.Resources>
 </Application>
