--- a/App.xaml
+++ b/App.xaml
@@ -4,11 +4,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SysMax"
              xmlns:models="clr-namespace:SysMax2._1.Models"
+             xmlns:converters="clr-namespace:SysMax2._1.Converters"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <!-- Converters -->
-            <models:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
-        <models:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter"/>
+        <!-- Reference the built-in BooleanToVisibilityConverter from the System.Windows namespace -->
+        <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+        <converters:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter" />
+
 
         <!-- Common colors and brushes -->
         <SolidColorBrush x:Key="PrimaryColor" Color="#3498db"/>
